# pocs

./: .clang-format  .gitignore  .pre-commit-config.yaml  README.md  setup.cfg
cpp/000_TEMPLATE_CMAKE/: build_and_run.sh  main.cpp
cpp/000_TEMPLATE_MESON/: build_and_run.sh  main.cpp  meson.build
cpp/CATEGORY_libs/LIB_OpenTelemetry_01_basics/: compile_commands.json  meson.build
cpp/CATEGORY_libs/LIB_OpenTelemetry_04_compile_option_to_use_sdk_or_not/: build_and_run.sh  meson.build
cpp/CATEGORY_libs/LIB_OpenTelemetry_04_compile_option_to_use_sdk_or_not/init_telemetry/: init_telemetry.cpp
cpp/CATEGORY_libs/LIB_OpenTelemetry_06_visualizing_traces_with_jaeger_GRPC_in_docker_compose/src/: main.cpp  meson.build
cpp/CATEGORY_libs/LIB_OpenTelemetry_06_visualizing_traces_with_jaeger_GRPC_in_docker_compose/src/init_telemetry/: init_telemetry.cpp
cpp/CATEGORY_libs/LIB_aws_sdk_01_download_file_with_s3/src/: meson.build
cpp/CATEGORY_libs/LIB_catch2/catch2_01_basics_with_meson/: build_and_run.sh  meson.build  my_code.h
cpp/CATEGORY_libs/LIB_cppgtfs/: CMakeLists.txt  main.cpp
cpp/CATEGORY_libs/LIB_cppgtfs/cppgtfs/ad/cppgtfs/: Parser.h
cpp/CATEGORY_libs/LIB_cppgtfs/cppgtfs/ad/cppgtfs/gtfs/: ContContainer.h  Frequency.h  NullContainer.h  Route.h  Service.cpp  Trip.h
cpp/CATEGORY_libs/LIB_cppgtfs/cppgtfs/ad/cppgtfs/gtfs/flat/: Agency.h  Service.h  Stop.h  Transfer.h
cpp/CATEGORY_libs/LIB_cppgtfs/cppgtfs/ad/util/: CsvParser.h  CsvWriter.cpp  CsvWriter.h  dtoa_milo.h
cpp/CATEGORY_libs/LIB_googletest/gtest_01_basics_with_meson/: .gitignore  build_and_run.sh  meson.build  my_code.cpp
cpp/CATEGORY_libs/LIB_libosmium_convert_to_geojson_BETTER/src/: CMakeLists.txt
cpp/CATEGORY_libs/LIB_libosmium_convert_to_geojson_BETTER/src/common/: graphtypes.h
cpp/CATEGORY_libs/LIB_libosmium_convert_to_geojson_BETTER/src/dumping/: geojson.h
cpp/CATEGORY_libs/LIB_libosmium_convert_to_geojson_BETTER/src/graph/: osmparsing.h
cpp/CATEGORY_libs/LIB_libosmium_convert_to_geojson_BETTER/src/parsing/: polygonfile.h
cpp/CATEGORY_libs/LIB_linking_boost/v3_with_cmake_static_link/: CMakeLists.txt  build_and_run.sh
cpp/CATEGORY_libs/LIB_protobuf_03_with_cmake/writer/: CMakeLists.txt
cpp/CATEGORY_libs/LIB_rdkafka_03_pubsub/: meson.build
cpp/CATEGORY_libs/LIB_rdkafka_03_pubsub/src/: main_showconf.cpp
cpp/CATEGORY_patterns/pimpl/: build_and_run.sh  meson.build
cpp/CATEGORY_patterns/pimpl/WITH_PIMPL/: myapp.cpp
cpp/CATEGORY_patterns/pimpl/repo/: repo.h
cpp/LIB_OpenTelemetry_01_basics/: build_and_run.sh  main.cpp
cpp/LIB_OpenTelemetry_02_using_api_without_sdk/: build_and_run.sh  meson.build
cpp/LIB_OpenTelemetry_03_using_separately_api_and_sdk/: build_and_run.sh  main.cpp  meson.build  setup_otel_dependency.sh
cpp/LIB_OpenTelemetry_03_using_separately_api_and_sdk/app/: app.cpp  app.h
cpp/LIB_OpenTelemetry_03_using_separately_api_and_sdk/init_telemetry/: init_telemetry.cpp  init_telemetry.h
cpp/LIB_OpenTelemetry_05_visualizing_traces_with_jaeger_HTTP/: meson.build  setup_otel_dependency.sh
cpp/LIB_OpenTelemetry_05_visualizing_traces_with_jaeger_HTTP/app/: app.cpp
cpp/LIB_OpenTelemetry_05_visualizing_traces_with_jaeger_HTTP/init_telemetry/: init_telemetry.cpp
cpp/LIB_RoutingKit_01_basics/: main.cpp
cpp/LIB_bgl_bridge_detection/src/: CMakeLists.txt  conanfile.txt  conanprofile.txt  connected_components.cpp  connected_components.h  convexhull.h  dump_to_geojson.h  graph.cpp  graph.h  graphtypes.h  main.cpp  osmparsing.cpp  osmparsing.h  parse_polygonfile.cpp  polygon.cpp
cpp/LIB_boost_geometry_convexhull/src/: CMakeLists.txt  main.cpp
cpp/LIB_boost_geometry_rtree/: CMakeLists.txt  main.cpp
cpp/LIB_glaze/glaze_01_basics/: CMakeLists.txt  build_and_run.sh
cpp/LIB_glaze/glaze_01_basics/src/: main.cpp
cpp/LIB_googlebenchmark/01_basics_with_meson/: .gitignore  build_and_run.sh  meson.build
cpp/LIB_sqlite3_01_basics/: main.cpp  meson.build
cpp/TOOL_cmake/cmake_05_add_custom_target/: CMakeLists.txt
cpp/TOOL_cmake/cmake_05_add_custom_target/src/: main.cpp
cpp/TOOL_cmake/cmake_07_execute_process/: CMakeLists.txt
cpp/TOOL_cmake/cmake_09_post_build_command/: CMakeLists.txt  build_and_run.sh
cpp/TOOL_cmake/cmake_15_lists_are_strings/: CMakeLists.txt  build_and_run.sh
cpp/TOOL_cmake/cmake_15_lists_are_strings/src/: main.cpp
cpp/TOOL_cpphttplib/: CMakeLists.txt  conanfile.txt  main.cpp
cpp/TOOL_meson/04_indirect_dependency_handled_manually/: build_and_run.sh  main.cpp  meson.build
cpp/TOOL_meson/04_indirect_dependency_handled_manually/person/: person.cpp
cpp/lto/: lib.cpp  (+2 more)
cpp/panic/: CMakeLists.txt  build_and_run.sh  main.cpp  panic.cpp  panic.h
cpp/project_organization/03_multiple_components_nested_hierarchy/: build_and_run.sh  meson.build
cpp/project_organization/03_multiple_components_nested_hierarchy/personal_infos/: meson.build
cpp/project_organization/03_multiple_components_nested_hierarchy/personal_infos/address/impl/: address.cpp
cpp/project_organization/03_multiple_components_nested_hierarchy/personal_infos/address/public/personal_infos/address/: address.h
cpp/project_organization/03_multiple_components_nested_hierarchy/phonebook/: meson.build
cpp/project_organization/03_multiple_components_nested_hierarchy/phonebook/impl/: database.cpp  filter.h
cpp/project_organization/03_multiple_components_nested_hierarchy/phonebook/mains/: cli.cpp
cpp/project_organization/03_multiple_components_nested_hierarchy/phonebook/public/phonebook/: database.h
cpp/project_organization/03_multiple_components_nested_hierarchy/phonebook/tests/: test_private_impl_filter.cpp
cpp/project_organization/03_multiple_components_nested_hierarchy/tests/: test_address_public_api.cpp  test_phone_public_api.cpp  test_phonebook_public_api.cpp
for_my_blog/rtree_using_libosmium/: CMakeLists.txt  build_and_run.sh  conanfile.txt  main.cpp
python/packaging/02_basic_packaging_setupcfg/: setup.cfg
python/packaging/02_basic_packaging_setupcfg/src/: veryimportant.py
shell/: concurrent.sh  run.sh  sequential.sh  with_error_concurrent.sh  with_error_sequential.sh
(+1762 files in other folders)
