# see https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = basic1
version = 0.0.1
author = Luke SKYWALKER
author_email = luke.skywalker@rebellion.universe
description = POC on basic packaging

[options]
# a list :
packages=
    usefulmodule
# a dict :
package_dir=
    usefulmodule=src
